@@ -29,11 +29,11 @@ httpd: $(REGLIB) $(OBJS)
 	$(CC) $(LFLAGS)  -o httpd $(OBJS) $(REGLIB) $(LIBS)
 
 regex/libregex.a:
-	(cd regex; $(MAKE) lib CC=$(CC) AUX_CFLAGS="$(CFLAGS)" RANLIB=$(RANLIB))
+	(cd regex; $(MAKE) lib CC=$(CC) AUX_CFLAGS="$(CFLAGS)" RANLIB="$(RANLIB)")
 
 modules/proxy/libproxy.a:
 	(cd modules; \
-	$(MAKE) CC=$(CC) AUX_CFLAGS="$(CFLAGS)" RANLIB=$(RANLIB))
+	$(MAKE) CC=$(CC) AUX_CFLAGS="$(CFLAGS)" RANLIB="$(RANLIB)")
 
 clean:
 	rm -f httpd $(OBJS) 
